objects/ccpe_ocp__Cloudcoach_Project__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_ocp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Cloudcoach_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__End_Date__c</fullName>
        <formula>ccpe_ocp__Project__r.project_cloud__End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Cloudcoach_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Project_Owner__c</fullName>
        <formula>ccpe_ocp__Project__r.Owner:User.FirstName  &amp; &apos; &apos; &amp; ccpe_ocp__Project__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Project_Status__c</fullName>
        <formula>ccpe_ocp__Project__r.project_cloud__Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Project__c</fullName>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipName>Cloudcoach_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Start_Date__c</fullName>
        <formula>ccpe_ocp__Project__r.project_cloud__Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Cloud Coach Project (Deprecated)</label>
    <nameField>
        <displayFormat>CCP-{0}</displayFormat>
        <label>Cloud Coach Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Coach Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>